--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ decorator==5.1.1
 executing==1.2.0
 Fiona==1.9.1
 Flask==2.2.3
-geopandas==0.12.2
+geopandas
 idna==3.4
 ipykernel==6.21.2
 ipython==8.10.0
