--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,12 @@
 gunicorn
-ansi2html==1.8.0
-asttokens==2.2.1
-attrs==22.2.0
-backcall==0.2.0
-certifi==2022.12.7
-charset-normalizer==3.0.1       
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.6
-comm==0.1.2
-daq==0.4.2
-dash==2.8.1
-dash-bootstrap-components==1.3.1
-dash-core-components==2.0.0     
-dash-daq==0.5.0
-dash-html-components==2.0.0     
-dash-table==5.0.0
-debugpy==1.6.6
-decorator==5.1.1
-executing==1.2.0
-Fiona==1.9.1
-Flask==2.2.3
+dash
+dash-core-components
+dash-html-components
+dash_renderer
+dash-daq
+dash-bootstrap-components
+numpy
+pandas
+plotly
+requests
 geopandas
-ipykernel==6.21.2
-ipython==8.10.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jupyter-dash==0.4.2
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-munch==2.5.0
-nest-asyncio==1.5.6
-numpy==1.24.2
-packaging==23.0
-pandas==1.5.3
-parso==0.8.3
-pickleshare==0.7.5
-platformdirs==3.0.0
-plotly==5.11.0
-prompt-toolkit==3.0.37
-psutil==5.9.4
-pure-eval==0.2.2
-Pygments==2.14.0
-pyproj==3.4.1
-python-dateutil==2.8.2
-pytz==2022.7.1
-pywin32==305
-pyzmq==25.0.0
-requests==2.28.2
-retrying==1.3.4
-shapely==2.0.1
-six==1.16.0
-stack-data==0.6.2
-tenacity==8.1.0
-tornado==6.2
-traitlets==5.9.0
-urllib3==1.26.14
-wcwidth==0.2.6
-Werkzeug==2.2.3
